welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: not found: value i
	if(i.e. a/10 == b%(10))
           ^shareDigit:4: error: not found: value i
	if(i.e. b/10 == a%(10))
           ^